# chess

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check_pull_requests.yml  check_push.yml
app/: Main.cpp
cmake/: AddTestModule.cmake
lib/logic/: CMakeLists.txt
lib/logic/include/logic/: Board.hpp  ChessBoard.hpp  Field.hpp  Piece.hpp
lib/logic/src/: ChessBoard.cpp
lib/logic/src/logic/: Field.cpp
lib/util/: CMakeLists.txt
lib/util/include/util/: Exception.hpp  Vector2.hpp
test/: CMakeLists.txt
test/src/: BoardTests.cpp  DummyTests.cpp  FieldTest.cpp  FieldTests.cpp
